Wed, 13 Dec 2006 01:14:41 +0100 <thp@perli.net>
        * src/gpodder/gpodder.py: Code to support new style episode info 
          dialog
        * data/gpodder.glade: New style for your neat episode info dialog

Wed, 13 Dec 2006 00:17:40 +0100 <thp@perli.net>
        * src/gpodder/gpodder.py: Fix location of gPodder icon file
        * setup.py: Install gPodder 48x48 icon in /usr/share/gpodder for 
          libglade to pick it up

Wed, 13 Dec 2006 00:10:11 +0100 <thp@perli.net>
        * src/gpodder/gpodder.py: Add support for "Play" button in main 
          gpodder dialog (depending on which episode is selected)
        * data/gpodder.glade: Add support for "Play" button (see above)
        * TODO: Release goals for 0.8.0 updated
        * bin/gpodder: Updated release date + version

Mon, 11 Dec 2006 16:11:54 +0100 <thp@perli.net>
        * src/gpodder/gpodder.py: Don't treat already downloaded but 
          deleted episodes as "new" when clicking on "download new" - 
          thanks to Seth Remington for the suggestion
        * bin/gpodder: Pushed release date + version

Mon, 11 Dec 2006 15:02:56 +0100 <thp@perli.net>
        * TODO: Added release goals for gPodder 0.9.0

Mon, 11 Dec 2006 01:23:31 +0100 <thp@perli.net>
        * src/gpodder/libplayers.py: Fixed a bug when there are non-
          dotdesktop files in /usr/share/applications/ - thanks to Joel 
          Calado for reporting this bug on gpodder-devel :)
        * bin/gpodder: Pushed release date + version

Sat,  9 Dec 2006 03:04:06 +0100 <thp@perli.net>
        * src/gpodder/gpodder.py: Fixed a bug that prevented opening the 
          gPodder preferences window

Sat,  9 Dec 2006 02:56:52 +0100 <thp@perli.net>
        * src/gpodder/gpodder.py: Massive cleanup, this might introduce 
          new bugs from refactoring; please report if you find any
        * src/gpodder/liblocaldb.py: Fix get_filename_by_podcast() function 
          to check for errors in return value of get_channel()