@@ -1,3 +1,8 @@
+Wed, 13 Dec 2006 01:22:30 +0100 <thp@perli.net>
+        * src/gpodder/gpodder.py: Utilize a FileChooserButton instead of
+          "emulating" it using our own widgets and methods
+        * data/gpodder.glade: Add FileChooserButton to gPodderProperties
+
 Wed, 13 Dec 2006 01:14:41 +0100 <thp@perli.net>
         * src/gpodder/gpodder.py: Code to support new style episode info 
           dialog
